<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txt_order_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/success"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/txt_payment_method_pretext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_order_success"
        android:layout_margin="10dp"
        android:text="@string/success_message_pretext"
        android:textAlignment="textStart"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txt_payment_method_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_payment_method_pretext"
        android:layout_margin="10dp"
        android:textAlignment="textStart"
        android:layout_centerInParent="true"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="@dimen/buy_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_payment_method_token"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/continue_shopping"/>

</RelativeLayout>