<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.androidpaydemo.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/shinobi_toy"
        android:id="@+id/imgProduct"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtProductTitle"
        android:text="@string/product_title"
        android:layout_below="@+id/imgProduct"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:textSize="30dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtProductDescription"
        android:text="@string/product_description"
        android:layout_below="@+id/txtProductTitle"
        android:textAlignment="textStart"
        android:textSize="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignEnd="@+id/imgProduct"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtProductPrice"
        android:text="@string/product_price"
        android:layout_below="@id/txtProductTitle"
        android:layout_toRightOf="@id/txtProductDescription"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:textSize="15dp"/>
    <LinearLayout
        android:id="@+id/layout_android_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtProductDescription"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/placeholder_button_fragment"
            android:layout_width="@dimen/buy_button_width"
            android:layout_height="@dimen/buy_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_xlarge" />
    </LinearLayout>
</RelativeLayout>
